src/objects/ints__TUCR_Legal__c.object
<CustomObject>
    <fields>
        <fullName>ints__CaseNumber__c</fullName>
        <label>Case Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CurrentBalance__c</fullName>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__DateReported__c</fullName>
        <label>Date Reported</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__DateRevised__c</fullName>
        <label>Date Revised</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__DateSatisfied__c</fullName>
        <label>Date Satisfied</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Lawyer__c</fullName>
        <label>Lawyer</label>
        <length>174</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Narrative1__c</fullName>
        <label>Narrative 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__OriginalAmount__c</fullName>
        <label>Original Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Plaintiff__c</fullName>
        <label>Plaintiff</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__TransUnion_Credit_Report__c</fullName>
        <label>TransUnion Credit Report</label>
        <referenceTo>ints__TransUnion_Credit_Report__c</referenceTo>
        <relationshipName>Legals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TUCR Legal</label>
    <nameField>
        <displayFormat>TUCR_LE-{000000000}</displayFormat>
        <label>Legal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TUCR Legals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>